--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,5 @@
 <ul>
   <% @filenames.each do |filename| %>
-    <li><%= filename %></li>
+    <li><a href="/<%= filename %>"><%= filename %></a></li>
   <% end %>
 </ul>
