--- a/views/index.erb
+++ b/views/index.erb
@@ -3,8 +3,26 @@
     <li>
       <a href="/<%= filename %>"><%= filename %></a>
       <a href="/<%= filename %>/edit">edit</a>
+      <form action="/<%= filename %>/delete" method="post">
+        <input type="submit" value="Delete">
+      </form>
     </li>
   <% end %>
 </ul>
 
 <a href="/new">New Document</a>
+
+<% if session[:username] %>
+
+  <form method="post" action="/users/signout">
+    <p class="user-status">
+      Signed in as <%= session[:username] %>.
+      <button type="submit">Sign Out</button>
+    </p>
+  </form>
+
+<% else %>
+
+  <p class="user-status"><a href="/users/signin">Sign In</a></p>
+
+<% end %>
